<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eurobot_hardware</name>
  <version>1.0.0</version>
  <description>Interface materielle pour robot mecanum</description>
  <maintainer email="tgensbittel@icloud.com">Theophile Gensbittel</maintainer>
  <license>Apache 2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>

  <build_depend>pluginlib</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>